--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
@@ -17,19 +18,18 @@
     "react-dom": "^18.0.0",
     "react-redux": "^8.1.2",
     "react-scripts": "^5.0.1",
-    "redux": "^4.2.1",
     "web-vitals": "^1.1.0"
   },
   "devDependencies": {
-    "@types/react-dom": "^18.2.7",
     "@types/react": "^18.2.15",
+    "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
+    "eslint": "^8.45.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^5.0.0",
+    "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
-    "eslint-plugin-react": "^7.32.2",
-    "eslint": "^8.45.0",
     "prettier": "^3.0.0",
     "vite": "^4.4.5"
   }
